--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ node_modules/
 jspm_packages/
 cache/
 artifacts/
+cache_forge/
+out/
+typechain-types/
 # TypeScript v1 declaration files
 typings/
 
